// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete User Modal displays an error when delete returns error 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Are you sure?
              </h5>
            </div>
            <div
              class="modal-body"
            >
              Deleting failed.  Try again?
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="btn btn-danger"
                type="button"
              >
                Yes
              </button>
              <button
                class="btn btn-secondary"
                type="button"
              >
                No
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;

exports[`Delete User Modal displays an error when delete throws 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Are you sure?
              </h5>
            </div>
            <div
              class="modal-body"
            >
              Deleting failed.  Try again?
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="btn btn-danger"
                type="button"
              >
                Yes
              </button>
              <button
                class="btn btn-secondary"
                type="button"
              >
                No
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;

exports[`Delete User Modal renders hidden correctly 1`] = `
<body
  class=""
>
  <div />
</body>
`;

exports[`Delete User Modal renders shown correctly 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Are you sure?
              </h5>
            </div>
            <div
              class="modal-body"
            >
              Are you sure you want to delete your account? This cannot be un-done.
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="btn btn-danger"
                type="button"
              >
                Yes
              </button>
              <button
                class="btn btn-secondary"
                type="button"
              >
                No
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;
